[gd_scene load_steps=36 format=3 uid="uid://ccvooj6vv68fb"]

[ext_resource type="Script" path="res://character/player.gd" id="1_gyk1h"]
[ext_resource type="Shader" path="res://art/midModulate.gdshader" id="2_mg3uh"]
[ext_resource type="Texture2D" uid="uid://bwe0riocsdbjg" path="res://art/character-sheet.png" id="3_bxiry"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w4u0b"]
shader = ExtResource("2_mg3uh")
shader_parameter/modulate = Vector4(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_phxom"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68nlt"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlmeg"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65uxn"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5a02"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trvxw"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6y6e"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a50a"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_at8gk"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhuqk"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8awu"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v4re"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v55uf"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yw0h"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unq3d"]
atlas = ExtResource("3_bxiry")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buyjw"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo8cq"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msj71"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0ljy"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mqms"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uaae"]
atlas = ExtResource("3_bxiry")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmlno"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro6u0"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d3qk"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpe1t"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85e6k"]
atlas = ExtResource("3_bxiry")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_suytl"]
atlas = ExtResource("3_bxiry")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw36k"]
atlas = ExtResource("3_bxiry")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw3vo"]
atlas = ExtResource("3_bxiry")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_di1sv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phxom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68nlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlmeg")
}],
"loop": false,
"name": &"atk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65uxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5a02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trvxw")
}],
"loop": false,
"name": &"atk_h",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6y6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a50a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at8gk")
}],
"loop": false,
"name": &"atk_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhuqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8awu")
}],
"loop": false,
"name": &"crouch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v4re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v55uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yw0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unq3d")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buyjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo8cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msj71")
}],
"loop": false,
"name": &"jump_double",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0ljy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mqms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uaae")
}],
"loop": false,
"name": &"jump_end",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmlno")
}],
"loop": true,
"name": &"jump_loop",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro6u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d3qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpe1t")
}],
"loop": false,
"name": &"jump_start",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85e6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suytl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw36k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw3vo")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6wgwp"]
radius = 11.0
height = 32.0

[node name="Player" type="CharacterBody2D"]
z_as_relative = false
collision_mask = 3
floor_stop_on_slope = false
floor_snap_length = 3.0
script = ExtResource("1_gyk1h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_w4u0b")
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_di1sv")
animation = &"crouch"
autoplay = "idle"
frame = 1
frame_progress = 1.0
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6wgwp")

[node name="RangeCDTimer" type="Timer" parent="."]

[node name="MeleeCDTimer" type="Timer" parent="."]

[node name="ExpiryTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="RangeCDTimer" to="." method="_on_range_cd_timer_timeout"]
[connection signal="timeout" from="MeleeCDTimer" to="." method="_on_melee_cd_timer_timeout"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
